--- a/src/components/AuthorView.css
+++ b/src/components/AuthorView.css
@@ -39,8 +39,8 @@
 }
 
 .profile-picture {
-  width: 60%;
-  height: 90%;
+  width: 50%;
+  height: 50%;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -141,6 +141,10 @@
     height: 100px;
     margin-top: 10px;
     margin-left: auto;
+  }
+  .profile-picture {
+    width: 100%;
+    height: 100%;
   }
   
   .edit-button {
